# PLAnalytics

./: .env.example  .gitignore  CLAUDE.md  escopo.md  main.py  playwirght.py  pyproject.toml  requirements.txt  test.py
.claude/: settings.local.json
Docs/: 00_resumo.md  01_entendimento_do_negocio.md  02_agregacao_jogadores.md
auxiliares_claude/: CRISP-DM Analysis Template.ipynb
data/sql/: 001_schema.sql  002_rls_policies.sql  003_powerbi_role.sql  004_player_stats.sql  005_match_stats_extend.sql  006_drop_pipeline_runs.sql
notebooks/: 03_preparacao_e_analise.ipynb  04_modelagem.ipynb
pipeline/: Dockerfile  docker-compose.yaml  requirements.txt  supabase_client.py  xvfb-entrypoint.sh
pipeline/dags/: dag_refresh_powerbi.py  dag_scraping_premier_league.py
pipeline/scripts/: _debug_fixtures.py  build_dataset.py  predict_match.py  predict_today.py  refetch_missing_by_id.py  run_migrations.py  scrape_and_load.py  seed_teams.py  setup_storage.py  update_from_last_date.py
scraper/: capture_fixtures.py  models.py  scraper.py
scraper/config/: teams.yaml
scraper/tests/: test_models.py  test_scraper.py
