[project]
name = "planalytics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "supabase>=2.28.2",
    "tenacity>=9.1.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live browser tests (require internet and Playwright browser)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",
]
