[project]
name = "worldcup-analytics"
version = "0.1.0"
description = "Previsão de resultados de jogos da Copa do Mundo (scraping SofaScore + ML)"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.0",
    "pandas>=3.0.1",
    "patchright>=1.60.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.5.0",
    "supabase>=2.28.2",
    "tenacity>=9.1.4",
    "xgboost>=3.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live browser tests (require internet and Playwright browser)",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",
]
# Análise/EDA e notebooks (Fase 3+ CRISP-DM)
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
]
